# dttv-android

./: .gitignore  README.md
SimplePlayer/: .project  AndroidManifest.xml
SimplePlayer/jni/: Android.mk  ao_android.cpp  dtp_jni.c  render_android.c
SimplePlayer/jni/include/: dt_av.h  dt_sync.h  dt_type.h  dtplayer.h  dtplayer_api.h  dtplayer_io.h  dtplayer_update.h  dtplayer_util.h  dtvideo_android.h
SimplePlayer/res/layout/: activity_display_message.xml  activity_main.xml
SimplePlayer/res/values/: strings.xml
dttv/: .project  AndroidManifest.xml  build.gradle  gradle.properties  import-summary.txt  project.properties  settings.gradle
dttv/app/: build.gradle
dttv/dttv-samples/: build.gradle
dttv/dttvlib/: build.gradle  proguard-rules.pro
dttv/dttvlib/src/main/jni/: CMakeLists.txt  dttv_jni.cpp  dttv_jni.h  dttv_jni_cmd.h  dttv_jni_dtp.cpp  dttv_jni_dtp.h  dttv_jni_plugin.h  dttv_jni_surface.cpp  dttv_jni_surface.h  dttv_jni_utils.c  dttv_jni_utils.h
dttv/dttvlib/src/main/jni/plugin/: gl_ops.cpp  gl_ops.h  gl_render.cpp  gl_render.h  gl_render_rgb.cpp  gl_render_rgb.h  gl_render_saturation.cpp  gl_render_yuv.cpp  gl_render_yuv.h  gl_yuv.cpp  gl_yuv.h  plugin_ao_opensl.c  plugin_so_android.cpp  plugin_vo_opengl.cpp  plugin_vo_surface.cpp
dttv/dttvlib/src/main/jni/plugin/filter/: gl_filter.h  gl_filter_none.h  gl_filter_rgb.h  gl_filter_saturation.h  gl_filter_yuv.h
dttv/jni/: Android.mk  Application.mk  android_dtplayer.cpp  android_dtplayer.h  android_jni.cpp  android_opengl.cpp  android_opengl.h  ao_android.cpp  ao_audiotrack.cpp  ao_opensl.c  dtp_jni.c  dtp_native.c  dtp_native.h  dtp_native_api.cpp  dtp_native_api.h  ext_wrapper.c  ext_wrapper.h  opengl_android.cpp  opengl_android.h  opensles_android.c  readme  register_natives.c  render_android.c  render_android.h  vd_stagefright.cpp  vo_android.c  vo_android.cpp
(+340 files in other folders)
